# users-rs

./: .gitignore  README.md  package.json  pnpm-lock.yaml
prisma_cli/: Cargo.toml
server/: Cargo.toml
server/prisma/: schema.prisma
server/src/: main.rs  prisma.rs
server/src/routes/: authentication.rs  entry.rs  mod.rs
server/src/types/: mod.rs
server/src/types/authentication/: error.rs  mod.rs  success.rs  user.rs
server/src/types/entry/: error.rs  jwt.rs  mod.rs  success.rs  user.rs
server/src/types/shared/: mod.rs  status.rs
server/src/utils/: eth_message.rs  get_message.rs  get_pubkey.rs  mod.rs
