[package]
name = "prisma_cli"
version = "0.1.0"
edition = "2021"
description = "User auth microservice for Monatize w/ Axum and Prisma"
# authors="TheLDB <ldb@erikboles.com>"
repository = "https://github.com/Monatize/users-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.0" }