[package]
name = "users_rs"
version = "0.1.0"
edition = "2021"
description = "User auth microservice for Monatize w/ Axum and Prisma"
# authors="TheLDB <ldb@erikboles.com>"
repository = "https://github.com/Monatize/users-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.15" }
tokio = { version = "1.0", features = ["full"] }
serde_json = { version = " 1.0.85" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.0" }
serde = "1.0.144"
dotenv = "0.15.0"
web3 = "0.15.0" # MUST use web3 0.15.0, 0.16.0 and above has breaking changes w/ bitvec & prisma-client-rust/mysql_common
hex = "0.4.3"